--- a/KasparovvsDeepBlue01.html
+++ b/KasparovvsDeepBlue01.html
@@ -5,43 +5,243 @@
     </head>
  
     <style>
+        p
+        {
+            font-size: 40px;
+            margin: 0;
+            text-align: center;
+        }
         .white 
         {
-            background-color: white;
+            background-color: burlywood;
+            float: left;
+            height: 50px;
+            width: 50px;
         }
         .black
         {
-            background-color: black;
+            background-color: goldenrod;
+            float: left;
+            height: 50px;
+            width: 50px;
+        }
+        .rank
+        {
+            display: block;
+            float: left;
+            height: 50px;
+            width: 400px;
         }
     </style>
 
     <body>
         <div>
-            <div name = "Fila8">
-                <div class = "white" name = "a8" >
+            <div class = "rank" name = "fila8">
+                <div class = "white" name = "a8">
                     <p>&#9820;</p>
-                    <span style="color:blue">some *This is Blue italic.* text</span>
                 </div>
                 <div class = "black" name = "b8">
                     <p>&#9822;</p>
                 </div>
-                <div name = "c8" style="background-color:white;">
+                <div class = "white" name = "c8">
                     <p>&#9821;</p>
                 </div>
-                <div name = "d8" style="background-color:black;">
+                <div class = "black" name = "d8">
                     <p>&#9819;</p>
                 </div>
-                <div name = "e8" style="background-color:white;">
+                <div class = "white" name = "e8">
                     <p>&#9818;</p>
                 </div>
-                <div name = "f8" style="background-color:black;">
+                <div class = "black" name = "f8">
                     <p>&#9821;</p>
                 </div>
-                <div name = "g8" style="background-color:white;">
+                <div class = "white" name = "g8">
                     <p>&#9822;</p>
                 </div>
-                <div name = "h8" style="background-color:black;">
+                <div class = "black" name = "h8">
                     <p>&#9820;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila7">
+                <div class = "black" name = "a7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "white" name = "b7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "black" name = "c7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "white" name = "d7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "black" name = "e7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "white" name = "f7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "black" name = "g7">
+                    <p>&#9823;</p>
+                </div>
+                <div class = "white" name = "h7">
+                    <p>&#9823;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila6">
+                <div class = "white" name = "a6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "b6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "c6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "d6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "e6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "f6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "g6">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "h6">
+                    <p>&#8195;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila5">
+                <div class = "black" name = "a5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "b5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "c5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "d5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "e5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "f5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "g5">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "h5">
+                    <p>&#8195;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila4">
+                <div class = "white" name = "a4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "b4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "c4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "d4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "e4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "f4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "g4">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "h4">
+                    <p>&#8195;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila3">
+                <div class = "black" name = "a3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "b3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "c3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "d3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "e3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "f3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "black" name = "g3">
+                    <p>&#8195;</p>
+                </div>
+                <div class = "white" name = "h3">
+                    <p>&#8195;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila2">
+                <div class = "white" name = "a2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "black" name = "b2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "white" name = "c2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "black" name = "d2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "white" name = "e2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "black" name = "f2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "white" name = "g2">
+                    <p>&#9817;</p>
+                </div>
+                <div class = "black" name = "h2">
+                    <p>&#9817;</p>
+                </div>
+            </div>
+            <div class = "rank" name = "fila1">
+                <div class = "black" name = "a1">
+                    <p>&#9814;</p>
+                </div>
+                <div class = "white" name = "b1">
+                    <p>&#9816;</p>
+                </div>
+                <div class = "black" name = "c1">
+                    <p>&#9815;</p>
+                </div>
+                <div class = "white" name = "d1">
+                    <p>&#9813;</p>
+                </div>
+                <div class = "black" name = "e1">
+                    <p>&#9812;</p>
+                </div>
+                <div class = "white" name = "f1">
+                    <p>&#9815;</p>
+                </div>
+                <div class = "black" name = "g1">
+                    <p>&#9816;</p>
+                </div>
+                <div class = "white" name = "h1">
+                    <p>&#9814;</p>
                 </div>
             </div>
         </div>
