Tablero con divs
Tablero con divs

--- a/chessboard.html
+++ b/chessboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
     <html>
     <head>
-        <title>Kasparov vs Deep Blue Partida 1</title>
+        <title>Tablero de Ajedrez</title>
     </head>
  
     <style>
