Kasparov vs Deep Blue 5 shots
Kasparov vs Deep Blue 5 shots

--- a/KasparovvsDeepBlue03.html
+++ b/KasparovvsDeepBlue03.html
@@ -32,10 +32,15 @@
             height: 50px;
             width: 400px;
         }
+        .board
+        {
+            height: 400px;
+            width: 400px;
+        }
     </style>
 
     <body>
-        <div>
+        <div class = "board">
             <div class = "rank" name = "fila8">
                 <div class = "white" name = "a8">
                     <p>&#9820;</p>
@@ -70,13 +75,13 @@
                     <p>&#9823;</p>
                 </div>
                 <div class = "black" name = "c7">
-                    <p>&#9823;</p>
+                    <p>&#8195;</p>
                 </div>
                 <div class = "white" name = "d7">
-                    <p>&#8195;</p>
+                    <p>&#9823;</p>
                 </div>
                 <div class = "black" name = "e7">
-                    <p>&#8195;</p>
+                    <p>&#9823;</p>
                 </div>
                 <div class = "white" name = "f7">
                     <p>&#9823;</p>
@@ -122,13 +127,13 @@
                     <p>&#8195;</p>
                 </div>
                 <div class = "black" name = "c5">
-                    <p>&#8195;</p>
+                    <p>&#9823;</p>
                 </div>
                 <div class = "white" name = "d5">
-                    <p>&#9823;</p>
+                    <p>&#8195;</p>
                 </div>
                 <div class = "black" name = "e5">
-                    <p>&#9823;</p>
+                    <p>&#8195;</p>
                 </div>
                 <div class = "white" name = "f5">
                     <p>&#8195;</p>
