--- a/chessboard.html
+++ b/chessboard.html
@@ -32,10 +32,15 @@
             height: 50px;
             width: 400px;
         }
+        .board
+        {
+            height: 400px;
+            width: 400px;
+        }
     </style>
 
     <body>
-        <div>
+        <div class = "board">
             <div class = "rank" name = "fila8">
                 <div class = "white" name = "a8">
                     <p>&#9820;</p>
